--- a/main_model.ipynb
+++ b/main_model.ipynb
@@ -25,22 +25,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "face_cascade = cv2.CascadeClassifier(cv2.data.haarcascades + 'haarcascade_frontalface_default.xml')\n",
     "eye_cascade = cv2.CascadeClassifier(cv2.data.haarcascades + 'haarcascade_eye.xml')\n",
-    "# main_model = load_model('Model')"
+    "main_model = load_model('Model\\model.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "mixer.init()\n",
+    "alarm=mixer.Sound('alarm.wav')\n",
     "capture = cv2.VideoCapture(0)\n",
+    "score = 0 #since counting are fast like in miliseconds.\n",
     "while True:\n",
     "    ret,frame = capture.read()\n",
     "    gray = cv2.cvtColor(frame,cv2.COLOR_BGR2GRAY)\n",
@@ -52,8 +55,28 @@
     "    \n",
     "    for (x,y,w,h) in eyes:\n",
     "        cv2.rectangle(frame,pt1=(x,y),pt2=(x+w,y+h),color= (0,0,255),thickness=3)\n",
-    "\n",
-    "    cv2.imshow('frame',frame)\n",
+    "        #preprocessing step\n",
+    "        eye = frame[y:y+h,x:x+w]\n",
+    "        eye = cv2.resize(eye,(80,80)) #resize image\n",
+    "        eye = eye/255 #rescaling image by 255\n",
+    "        eye = eye.reshape(80,80,3) #reshape\n",
+    "        eye = np.expand_dims(eye,axis=0)\n",
+    "        #model prediction here\n",
+    "        prediction = main_model.predict(eye)\n",
+    "        if prediction[0][0] > 0.30: #if eyes are close\n",
+    "            score = score + 1\n",
+    "            if score>10:\n",
+    "                try:\n",
+    "                    alarm.play()\n",
+    "                except:\n",
+    "                    pass\n",
+    "        elif prediction[0][1] > 0.90:\n",
+    "            score = score - 1\n",
+    "            if score <0:\n",
+    "                score = 0\n",
+    " \n",
+    "        # print(prediction)\n",
+    "    cv2.imshow('Drowsiness Detection',frame)\n",
     "    if cv2.waitKey(35) & 0xFF==ord('Q'):\n",
     "        break\n",
     "capture.release()\n",
